--- a/planets/style.css
+++ b/planets/style.css
@@ -4,7 +4,7 @@ body {
   font-size: 14px;
   font-family: 'Abel', sans-serif;
   margin: 20px auto 20px;
-  width: 960px;
+  width:960px;
   line-height: 1.45em;
 }
 a {
@@ -60,12 +60,12 @@ input {
   .row:nth-child(odd) { background: rgba(0,0,0,0.05); }
   .header { font-weight: bold; }
   .cell { float: left; overflow: hidden; white-space: nowrap; width: 160px; height: 18px; }
-  .col-0 { width: 120px; }
+  .col-0 { width: 80px;}
 
   
 /* parcoords styles */
 .parcoords > svg, .parcoords > canvas { 
-  font: 11px font-family: 'Abel', sans-serif;
+  font-family: 'Abel', sans-serif;
   position: absolute;
 }
 .parcoords > canvas {
