--- a/planets/style.css
+++ b/planets/style.css
@@ -4,8 +4,9 @@ body {
   font-size: 14px;
   font-family: 'Abel', sans-serif;
   margin: 20px auto 20px;
-  width:960px;
+  width:1100px;
   line-height: 1.45em;
+  height:1100px;
 }
 a {
   color: #454545;
