--- a/planets/style.css
+++ b/planets/style.css
@@ -1,12 +1,18 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600);
 @import url('https://fonts.googleapis.com/css?family=Abel');
 body {
-  font-size: 14px;
+  font-size: 10px;
   font-family: 'Abel', sans-serif;
   margin: 20px auto 20px;
   width:1100px;
   line-height: 1.45em;
   height:1100px;
+  background:#e6e6e6;
+}
+h1 {
+  font-family: 'Abel', sans-serif;
+  fill: #000000;
+  font-size: 50px;
 }
 a {
   color: #454545;
@@ -32,12 +38,12 @@ pre {
   color: #444;
   font-family: 'Abel', sans-serif;
   padding: 4px 8px;
-  background: #f2f2f2;
+  background: #e6e6e6;
   border: 1px solid #ccc;
 }
 h1 small {
   font-weight: normal;
-  font-size:0.3em;
+  font-size:5px;
 }
 h3 {
   margin-top: 40px;
