--- a/d3visualization/style.css
+++ b/d3visualization/style.css
@@ -14,6 +14,12 @@ h1 {
   fill: #000000;
   font-size: 50px;
 }
+
+p {
+  font-family: 'Abel', sans-serif;
+  fill: #000000;
+  font-size: 10px;
+}
 a {
   color: #454545;
 }
